--- a/templates/connexion/connexion.html.twig
+++ b/templates/connexion/connexion.html.twig
@@ -3,59 +3,77 @@
 {% block title %}Connexion{% endblock %}
 
 {% block body %}
-    <form method="post">
-        {% if error %}
-            <div class="alert alert-danger">
-                {{ error.messageKey|trans(error.messageData, 'security') }}
+    <div class="min-h-screen py-12 px-4 sm:px-6 lg:px-8">
+        <div class="max-w-2xl mx-auto">
+            <div class="text-center mb-5">
+                <h1 class="text-3xl font-extrabold text-gray-900 tracking-tight">
+                    Connexion
+                </h1>
+                <p class="mt-2 text-sm text-gray-600">
+                    Utilisez vos identifiants
+                </p>
             </div>
-        {% endif %}
+            <div class="bg-white rounded shadow border border-slate-200 p-10">
+                <form method="post">
+                    {% if error %}
+                        <div class="">
+                            {{ error.messageKey|trans(error.messageData, 'security') }}
+                        </div>
+                    {% endif %}
 
-        {% if app.user %}
-            <div class="mb-3">
-                Connecté en tant que {{ app.user.userIdentifier }}, <a href="{{ path("app_deconnexion") }}">Déconnexion</a>
+                    {% if app.user %}
+                        <div class="">
+                            Connecté en tant que {{ app.user.userIdentifier }}, <a href="{{ path("app_deconnexion") }}">Déconnexion</a>
+                        </div>
+                    {% endif %}
+
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                        <label for="username">Email ou Pseudo</label>
+                        <input
+                            type="text"
+                            value="{{ last_username }}"
+                            name="_username"
+                            id="username"
+                            class="bg-slate-200"
+                            autocomplete="username"
+                            required autofocus
+
+                        >
+                        <label for="password">Mot de passe</label>
+                        <input
+                            type="password"
+                            name="_password"
+                            id="password"
+                            class="bg-slate-200"
+                            autocomplete="current-password"
+                            required
+                        >
+                    </div>
+                    <input
+                        type="hidden"
+                        name="_csrf_token"
+                        data-controller="csrf-protection"
+                        value="{{ csrf_token('authenticate') }}"
+                    >
+
+                    {#
+                    Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+                    See https://symfony.com/doc/current/security/remember_me.html
+                    #}
+                    <div class="grid grid-cols-1 md:grid-cols-2 items-center gap-4">
+                        <div class="items-center gap-2">
+                            <input type="checkbox" name="_remember_me" id="_remember_me">
+                            <label for="_remember_me">Rester connecté</label>
+                        </div>
+
+                        <div class="justify-self-end">
+                            <button class="rounded-full bg-sky-500 hover:bg-sky-700 p-1 text-white m-5 shadow" type="submit">
+                                Se connecter
+                            </button>
+                        </div>
+                    </div>
+                </form>
             </div>
-        {% endif %}
-
-        <h1 class="h3 mb-3 font-weight-normal">Connectez-vous</h1>
-        <label for="username">Email ou Pseudo</label>
-
-        <input
-            type="text"
-            value="{{ last_username }}"
-            name="_username"
-            id="username"
-            class="form-control"
-            autocomplete="username"
-            required autofocus
-        >
-        <label for="password">Mot de passe</label>
-        <input
-            type="password"
-            name="_password"
-            id="password"
-            class="form-control"
-            autocomplete="current-password"
-            required
-        >
-        <input
-            type="hidden"
-            name="_csrf_token"
-            data-controller="csrf-protection"
-            value="{{ csrf_token('authenticate') }}"
-        >
-
-        {#
-            Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-            See https://symfony.com/doc/current/security/remember_me.html
-        #}
-            <div class="checkbox mb-3">
-                <input type="checkbox" name="_remember_me" id="_remember_me">
-                <label for="_remember_me">Rester connecté</label>
-            </div>
-
-
-        <button class="btn btn-lg btn-primary" type="submit">
-            Se connecter
-        </button>
-    </form>
+        </div>
+    </div>
 {% endblock %}
