--- a/templates/sortie/accueil.html.twig
+++ b/templates/sortie/accueil.html.twig
@@ -1,20 +1,117 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello SortieController!{% endblock %}
+{% block title %}Accueil - Sortir.com{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-12 text-end">
+                <p>Date du jour : {{ "now"|date("d/m/Y") }}</p>
+                <p>Participant : {{ app.user.pseudo }}</p>
+            </div>
+        </div>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+        <h2 class="mb-4">Filtrer les sorties</h2>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/home/maurine/PhpstormProjects/projetSortirCom/src/Controller/SortieController.php</code></li>
-        <li>Your template at <code>/home/maurine/PhpstormProjects/projetSortirCom/templates/sortie/index.html.twig</code></li>
-    </ul>
-</div>
+        {# --- Section Formulaire de Recherche --- #}
+        <div class="card bg-light mb-4">
+            <div class="card-body">
+                {{ form_start(form) }}
+                <div class="row">
+                    <div class="col-md-5">
+                        {# Champ Campus #}
+                        {{ form_row(form.campus) }}
+                        {# Champ Recherche par nom #}
+                        {{ form_row(form.nom) }}
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                {{ form_row(form.dateDebut) }}
+                            </div>
+                            <div class="col-md-6">
+                                {{ form_row(form.dateFin) }}
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        {# Checkboxes des filtres logiques #}
+                        <div class="mt-4">
+                            {{ form_widget(form.isOrganisateur) }} {{ form_label(form.isOrganisateur) }} <br>
+                            {{ form_widget(form.isInscrit) }} {{ form_label(form.isInscrit) }} <br>
+                            {{ form_widget(form.isNotInscrit) }} {{ form_label(form.isNotInscrit) }} <br>
+                            {{ form_widget(form.isTerminee) }} {{ form_label(form.isTerminee) }}
+                        </div>
+                    </div>
+
+                    <div class="col-md-3 d-flex align-items-center justify-content-center">
+                        {# Bouton de soumission #}
+                        {{ form_widget(form.submit) }}
+                    </div>
+                </div>
+                {{ form_end(form) }}
+            </div>
+        </div>
+
+        {# --- Tableau des Sorties --- #}
+        <div class="table-responsive">
+            <table class="table table-hover table-bordered">
+                <thead class="table-dark">
+                <tr>
+                    <th>Nom de la sortie</th>
+                    <th>Date de la sortie</th>
+                    <th>Clôture</th>
+                    <th>Inscrits/Places</th>
+                    <th>État</th>
+                    <th>Inscrit</th>
+                    <th>Organisateur</th>
+                    <th>Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for sortie in sorties %}
+                    <tr>
+                        <td><strong>{{ sortie.nom }}</strong></td>
+                        {# Formatage des dates avec le filtre |date #}
+                        <td>{{ sortie.dateHeureDebut|date('d/m/Y H:i') }}</td>
+                        <td>{{ sortie.dateLimiteInscription|date('d/m/Y') }}</td>
+                        <td>
+                            {# Calcul de la taille de la collection des inscrits #}
+                            {{ sortie.inscrits|length }} / {{ sortie.nbInscriptionsMax }}
+                        </td>
+                        <td>{{ sortie.etat.libelle }}</td>
+                        <td class="text-center">
+                            {# On vérifie si l'utilisateur connecté est dans la liste des inscrits #}
+                            {% if app.user in sortie.inscrits %}
+                                <span class="badge bg-success">X</span>
+                            {% endif %}
+                        </td>
+                        <td>
+                            {# Lien vers le profil (TO-DO :à modifier quand route définitive) #}
+                            <a href="#">{{ sortie.organisateur.pseudo }}</a>
+                        </td>
+                        <td>
+                            {# Remplacement temporaire des routes inexistantes par # pour éviter les erreurs 500 #}
+                            <a href="#">Afficher</a>
+
+                            {# Si l'utilisateur est l'organisateur, il peut modifier #}
+                            {% if app.user == sortie.organisateur %}
+                                - <a href="#">Modifier</a>
+                            {% endif %}
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="8" class="text-center">Aucune sortie trouvée pour ces critères.</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+
+        {# Bouton de création mis en lien mort pour éviter l'erreur "route does not exist" #}
+        <div class="mt-3">
+            <a href="#" class="btn btn-primary btn-lg">Créer une sortie</a>
+        </div>
+    </div>
 {% endblock %}
