feat: Add a member profile page to display participant details by pseudo.

--- a/templates/member/show.html.twig
+++ b/templates/member/show.html.twig
@@ -22,7 +22,7 @@
             <dd>{{ participant.telephone }}</dd>
 
             <dt class="font-bold text-gray-700">Email :</dt>
-            <dd>{{ participant.email }}</dd>
+            <dd>{{ participant.mail }}</dd>
 
             {# On ajoutera les autres ici après ton test #}
         </dl>
