--- a/templates/sortie/accueil.html.twig
+++ b/templates/sortie/accueil.html.twig
@@ -117,6 +117,34 @@
                             {% if app.user == sortie.organisateur %}
                                 <a href="#" class="btn btn-sm btn-warning">Modifier</a>
                             {% endif %}
+                            {# ORGANISATEUR : Annuler - si Sortie ouverte et pas commencée #}
+                            {% if app.user == sortie.organisateur
+                                and sortie.etat.libelle == "Ouverte"
+                                and sortie.dateHeureDebut > date('now', 'Europe/Paris')
+                            %}
+                                <a href="{{ path('participation_annulation', { 'id': sortie.id }) }}">Annuler</a>
+                            {% endif %}
+
+                            {# INSCRIT : Se désister - si Sortie pas commencée #}
+                            {% if app.user != sortie.organisateur
+                                and app.user in sortie.inscrits
+                                and sortie.dateHeureDebut > date('now', 'Europe/Paris')
+                            %}
+                                <a href="{{ path('participation_desinscription', { 'id': sortie.id }) }}">Se désister</a>
+                            {% endif %}
+
+                            {# NON INSCRIT : S'inscrire - si Sortie pas commencée et a de la place + est ouverte #}
+                            {% if app.user != sortie.organisateur
+                                and not (app.user in sortie.inscrits)
+                                and sortie.nbInscriptionsMax
+                                and sortie.etat.libelle == "Ouverte"
+                                and sortie.dateHeureDebut > date('now', 'Europe/Paris')
+                                and sortie.inscrits|length < sortie.nbInscriptionsMax
+                            %}
+                                <a href="{{ path('participation_inscription', { 'id': sortie.id }) }}">S'inscrire</a>
+                            {% endif %}
+
+
                         </td>
                     </tr>
                 {% else %}
