feat: add member profile display and event listing/filtering pages.

--- a/templates/sortie/accueil.html.twig
+++ b/templates/sortie/accueil.html.twig
@@ -105,7 +105,7 @@
 
                         {# Organisateur #}
                         <td>
-                            <a href="#" class="text-decoration-none fw-bold">{{ sortie.organisateur.pseudo }}</a>
+                            <a href="{{ path('app_member_show', {'pseudo': sortie.organisateur.pseudo}) }}" class="text-decoration-none fw-bold">{{ sortie.organisateur.pseudo }}</a>
                         </td>
 
                         {# Actions #}
