--- a/templates/member/show.html.twig
+++ b/templates/member/show.html.twig
@@ -7,24 +7,32 @@
         <h1 class ="text-3xl font-extrabold text-center mb-10">
             {{ participant.pseudo }}
         </h1>
-        <dl class="grid grid-cols-2 gap-y-6 text-lg">
-            {# Ligne Campus #}
-            <dt class="font-bold text-gray-700">Campus :</dt>
-            <dd>{{ participant.campus.nom }}</dd>
+        <div class="bg-white shadow-xl rounded-2xl p-8 border border-slate-100">
+            <dl class="grid grid-cols-2 gap-y-6 text-lg">
+                {# Ligne Campus #}
+                <dt class="font-bold text-gray-700">Campus :</dt>
+                <dd>{{ participant.campus.nom }}</dd>
 
-            <dt class="font-bold text-gray-700">Prénom :</dt>
-            <dd>{{ participant.prenom }}</dd>
+                <dt class="font-bold text-gray-700">Prénom :</dt>
+                <dd>{{ participant.prenom }}</dd>
 
-            <dt class="font-bold text-gray-700">Nom :</dt>
-            <dd>{{ participant.nom }}</dd>
+                <dt class="font-bold text-gray-700">Nom :</dt>
+                <dd>{{ participant.nom }}</dd>
 
-            <dt class="font-bold text-gray-700">Téléphone :</dt>
-            <dd>{{ participant.telephone }}</dd>
+                <dt class="font-bold text-gray-700">Téléphone :</dt>
+                <dd>{{ participant.telephone }}</dd>
 
-            <dt class="font-bold text-gray-700">Email :</dt>
-            <dd>{{ participant.mail }}</dd>
+                <dt class="font-bold text-gray-700">Email :</dt>
+                <dd>{{ participant.mail }}</dd>
 
-            {# On ajoutera les autres ici après ton test #}
-        </dl>
+                {# On ajoutera les autres ici après ton test #}
+            </dl>
+        </div>
+        <div class="mt-12 text-center">
+            <a href="{{ path('app_accueil') }}" 
+                class="inline-block bg-slate-800 text-white px-8 py-3 rounded-lg font-bold shadow-md hover:bg-slate-700 transition-all active:scale-95">
+                Retour
+            </a>
+        </div>
     </div>
 {% endblock %}
