ajout du composant Data Transfer Object, ajout du DTO SearchParticipant, ajout du form SearchParticipantType, modification du security.yaml pour les pages en ^/admin/ 🦖

--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -33,7 +33,7 @@
 
             {% if app.user and app.user.pseudo %}
                 <li class="hover:underline">
-                    <a href="{{ path('app_member_show', {pseudo: app.user.pseudo}) }}">
+                    <a href="{{ path('app_profil_modifier', {pseudo: app.user.pseudo}) }}">
                         Mon profil
                     </a>
                 </li>
